page/css/styles.css
/* Reset */
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}ins{text-decoration:none}del{text-decoration:line-through}table{border-collapse:collapse;border-spacing:0}

@font-face {
  font-family: 'komika_displayregular';
  src: url('fonts/kmkdsp__-webfont.eot');
  src: url('fonts/kmkdsp__-webfont.eot?#iefix') format('embedded-opentype'),
       url('fonts/kmkdsp__-webfont.woff2') format('woff2'),
       url('fonts/kmkdsp__-webfont.woff') format('woff'),
       url('fonts/kmkdsp__-webfont.ttf') format('truetype'),
       url('fonts/kmkdsp__-webfont.svg#komika_displayregular') format('svg');
  font-weight: normal;
  font-style: normal;
}

*::selection {
  background-color: #82A83D;
}

html,
body,
.slideshow,
.slides,
.slides__slide,
.line,
.box,
.owl-carousel .owl-stage-outer,
.owl-carousel .owl-stage,
.owl-carousel .owl-item {
  height: 100%;
}

body {
  background-color: #ECF0F1;
}

a {
  text-decoration: none;
}

.menu__header {
  left: 0;
}

.menu__header {
  z-index: 11;
}

.menu__header__list {
  margin: 10px;
}

.menu__header__list__item a,
.warning {
  font-size: 18px;
}
.menu__header__list__item a,
.powered-by a,
.hulq__info__list__item--git .block,
.hulq__info__list__item--download .block,
.hulq__info__list__item--clean-code,
.hulq__info__list__item--code-fast,
.hulq__info__list__item--working-colaborate,
.arrow--down {
  transition: all .2s ease-out;
}

.slides,
.slides__slide,
.box,
.hulq__info__list__item--download,
.hulq__info__list__item--git,
.hulq__info__list__item--clean-code,
.hulq__info__list__item--code-fast,
.hulq__info__list__item--working-colaborate,
.box--centered {
  position: relative;
}

.slideshow {
  overflow: hidden;
}

.line,
.box {
  box-sizing: border-box;
}

.line:before,
.line:after {
  content: "";
}

.box,
.box--centered {
  width: 50%;
}

.box--centered {
  margin: 0 auto;
  top: 50%;
  transform: translateY(-50%);
}

.box,
.slides__slide {
  float: left;
}

.logo {
  bottom: 20px;
  left: -12%;
}

.logo,
.slides__slide {
  width: 100%;
}

.presentation,
.whitebox,
.warning {
  background-color: white;
  margin: 20px 20px 0;
}

.presentation,
.whitebox,
.warning {
  border: 2px solid #000;
}

.presentation__title,
.presentation__desc,
.hulq__slogan,
.whitebox,
.warning,
.powered-by,
.hulq__info__heading,
.hulq__info__heading--small,
.hulq__info__list__item--git .block,
.hulq__info__list__item--download .block,
.hulq__info__list__item--clean-code,
.hulq__info__list__item--code-fast,
.hulq__info__list__item--working-colaborate,
.arrow-container__message,
.comics-dialog span,
a {
  font-family: 'komika_displayregular';
}

.presentation__title {
  font-size: 32px;
  font-weight: 700;
  line-height: 38px;
  margin-bottom: 18px;
  -ms-text-shadow: 2px 1px 0 rgba(100,15,123,0.3);
  -webkit-text-shadow: 2px 1px 0 rgba(100,15,123,0.3);
  text-shadow: 2px 1px 0 rgba(100,15,123,0.3);
}

.presentation__desc,
.whitebox {
  color: #383838;
  font-size: 24px;
  line-height: 28px;
}

.line:after,
.hulq {
  clear: both;
}

.presentation,
.hulq {
  float: right;
}

.presentation,
.hulq,
.whitebox {
  padding: 20px;
}

.hulq {
  margin-top: 40px;
  width: calc(100% - 40px);
}

.hulq > span {
  display: block;
}

.hulq__name {
  font-family: 'Bangers', cursive;
  font-size: 200px;
  -ms-text-shadow: 2px 4px 0 #640f7b;
  -webkit-text-shadow: 2px 4px 0 #640f7b;
  text-shadow: 2px 4px 0 #640f7b;
}

.hulq__slogan {
  font-size: 68px;
}

.presentation__title,
.hulq__slogan,
.hulq__info__list__item--git .block,
.hulq__info__list__item--download .block,
.hulq__info__list__item--clean-code,
.hulq__info__list__item--code-fast,
.hulq__info__list__item--working-colaborate,
.arrow-container__message,
a {
  color: #640f7b;
}

.whitebox {
  margin: 0 18px 18px 0;
  width: calc(100% - 44px);
}

.whitebox p {
  margin-bottom: 12px;
}

.whitebox p:nth-last-of-type(1) {
  margin-bottom: 0;
}

.powered-by {
  margin: 0 20px 20px;
  text-align: right;
}

pre {
  font-size: 16px;
  line-height: 24px;
  padding: 10px;
  overflow: auto;
}

pre,
code {
  background-color: #640f7b;
  color: #fff;
  font-family: Consolas, Monaco, monospace;
  -moz-hyphens: none;
  -webkit-hyphens: none;
  hyphens: none;
  padding: 5px;
  border-radius: 5px;
  border: 1px solid #82A83D;
}

.hulq__name,
pre span,
a:hover {
  color: #82A83D;
}

pre em,
code em {
  font-style: italic;
}

.arrow--down,
.arrow--right,
.arrow--left {
  background-position: center;
  background-repeat: no-repeat;
  cursor: pointer;
}

.arrow--down {
  background-color: rgba(130, 168, 61, .45);
  background-image: url('../../images/arrow-down.png');
  background-size: 20px;
  border-radius: 50%;
  bottom: 10px;
  height: 50px;
  left: 50%;
  -moz-transform: translateX(-50%);
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 50px;
  z-index: 10;
}

.arrow--right {
  right: 20px;
}

.arrow--left {
  left: 20px;
  opacity: 1;
  transform: rotateY(180deg);
}

.arrow--right,
.arrow--left {
  background-image: url('../../images/arrow-right.png');
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  height: 70px;
  top: calc(50% - 35px);
  width: 70px;
}

.arrow--right,
.arrow--left,
.arrow-container__message {
  z-index: 10;
}

.arrow-container__message {
  right: 70px;
  top: 50%;
  transform: translateY(-50%);
}

.logo,
.arrow-container__message,
.arrow--right,
.arrow--left,
.arrow--down,
.menu__header,
.comics-dialog {
  position: absolute;
}

pre,
code,
.arrow--down:hover {
  background-color: #640f7b;
}

.arrow--down:hover {
  transition: all .2s ease-in;
}

@-webkit-keyframes shake {
  0%, 100% {-webkit-transform: translateX(0);}
  10%, 30%, 50%, 70%, 90% {-webkit-transform: translateX(-10px);}
  20%, 40%, 60%, 80% {-webkit-transform: translateX(10px);}
}

@keyframes shake {
  0%, 100% {transform: translateX(0);}
  10%, 30%, 50%, 70%, 90% {transform: translateX(-10px);}
  20%, 40%, 60%, 80% {transform: translateX(10px);}
}

.shake {
  -webkit-animation: shake 8s ease-in infinite;
  animation: shake 8s ease-in infinite;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.shake:hover {
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.warning {
  background-color: khaki;
  left: 50%;
  opacity: 0;
  padding: 6px;
  position: absolute;
  transform: translateX(-50%);
  transition: opacity .3s ease-out;
  width: 360px;
  z-index: 10;
}

.warning:before {
  content: "!";
  font-family: 'Bangers', cursive;
  font-size: 30px;
  margin: 0 5px;
}

.warning.show {
  opacity: 1;
  transition: opacity .5s ease-in;
}

.hulq__info {
  margin-top: 120px;
  padding-bottom: 60px;
}

.hulq__info__heading {
  font-size: 28px;
  text-align: center;
}

.hulq__info__heading--small {
  font-size: 20px;
  font-weight: normal;
  margin: 0 auto;
  max-width: 600px;
  padding: 20px;
  text-align: center;
}

.hulq__info__list {
  text-align: center;
}

.hulq__info__list li:not(:nth-of-type(1)) {
  margin-left: 60px;
}

.hulq__info__list__item--download .block,
.hulq__info__list__item--git .block,
.hulq__info__list__item--clean-code .block,
.hulq__info__list__item--code-fast .block,
.hulq__info__list__item--working-colaborate .block {
  height: 130px;
}

.line:before,
.line:after,
.hulq__info__list__item--download .block,
.hulq__info__list__item--git .block,
.hulq__info__list__item--clean-code .block,
.hulq__info__list__item--code-fast .block,
.hulq__info__list__item--working-colaborate .block {
  display: table;
}

.hulq__info__list__item--download span,
.hulq__info__list__item--git span,
.hulq__info__list__item--clean-code span,
.hulq__info__list__item--code-fast span,
.hulq__info__list__item--working-colaborate span {
  display: table-cell;
  vertical-align: bottom;
}

.hulq__info__list__item--download {
  background-image: url('../../images/hulq-download.png');
}

.hulq__info__list__item--git {
  background-image: url('../../images/hulq-git-repository.png');
}

.hulq__info__list__item--clean-code {
  background-image: url('../../images/hulq-xslt-clean-code.png');
}

.hulq__info__list__item--clean-code {
  background-image: url('../../images/hulq-xslt-clean-code.png');
}

.hulq__info__list__item--code-fast {
  background-image: url('../../images/hulq-xslt-code-fast.png');
}

.hulq__info__list__item--working-colaborate {
  background-image: url('../../images/hulq-xslt-working-colaborate.png');
}

.hulq__info__list__item--download,
.hulq__info__list__item--git,
.hulq__info__list__item--clean-code,
.hulq__info__list__item--code-fast,
.hulq__info__list__item--working-colaborate {
  background-position: center;
  background-repeat: no-repeat;
  background-size: 80px;
  min-height: 100px;
  vertical-align: top;
  width: auto;
}

.warning,
.warning:before,
.hulq__info__list__item--download,
.hulq__info__list__item--git,
.hulq__info__list__item--clean-code,
.hulq__info__list__item--code-fast,
.hulq__info__list__item--working-colaborate {
  display: inline-block;
}

.secondary {
  background-color: white;
  margin-bottom: 22px;
}

.hidden {
  height: 0;
  opacity: 0;
  overflow: hidden;
  transition: opacity .2s ease-out;
}

.comics-dialog {
  background-image: url('../../images/dialog.png');
  background-position: center;
  background-repeat: no-repeat;
  bottom: 48px;
  height: 88px;
  left: calc(50% + 6px);
  text-align: center;
  width: 116px;
}

.comics-dialog span {
  position: relative;
  top: 22%;
}

@media screen and (min-width: 320px) and (max-width: 600px) {
  .menu__header {
    text-align: right;
    position: relative;
  }

  .warning {
    margin: 0;
    width: calc(90% - 12px);
  }

  .box,
  .box--centered {
    width: 100%;
  }

  .logo {
    left: 0;
    opacity: .3;
  }

  .slides__slide.main .box:nth-last-of-type(2) {
    position: absolute;
  }

  .presentation,
  .whitebox {
    margin: 10px;
    padding: 10px;
  }

  .presentation__title {
    font-size: 22px;
    line-height: 24px;
    margin-bottom: 10px;
  }

  .presentation__desc,
  .whitebox {
    font-size: 16px;
    line-height: 18px;
  }

  .arrow--right,
  .arrow--left {
    top: 272px;
  }

  .hulq {
    margin-top: 0;
  }

  .hulq__name {
    font-size: 114px;
  }

  .hulq__slogan {
    font-size: 40px;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .hulq__name {
    font-size: 144px;
  }

  .hulq__slogan {
    font-size: 50px;
  }
}

@media screen and (min-width: 768px) {
  .presentation__title {
    font-size: 26px;
    line-height: 28px;
    margin-bottom: 10px;
  }

  .presentation__desc {
    font-size: 20px;
    line-height: 22px;
  }

  .hulq {
    margin-top: 80px;
  }
}

